kubernetes/apps/monitoring/victoriametrics/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmagent
  namespace: monitoring
spec:
  hostnames:
    - vmagent.hrcek.rs
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: vmagent-victoriametrics
          namespace: monitoring
          port: 8429
